--- a/src/app/features/sign-up/sign-up.component.html
+++ b/src/app/features/sign-up/sign-up.component.html
@@ -1,1 +1,91 @@
-<p>sign-up works!</p>
+<div class="container">
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-box p-fluid grid formgrid">
+    <!-- First Name -->
+    <div class="field col-12 md:col-6">
+      <label for="firstname">First Name</label>
+      <input pInputText id="firstname" formControlName="firstname" placeholder="First Name" />
+    </div>
+
+    <!-- Last Name -->
+    <div class="field col-12 md:col-6">
+      <label for="lastname">Last Name</label>
+      <input pInputText id="lastname" formControlName="lastname" placeholder="Last Name" />
+    </div>
+
+    <!-- Email -->
+    <div class="field col-12">
+      <label for="email">Email</label>
+      <input pInputText id="email" formControlName="email" placeholder="Email Address" />
+    </div>
+
+    <!-- Birthdate -->
+    <div class="field col-12 md:col-6">
+      <label for="birthdate">Birthdate</label>
+      <input pInputText id="birthdate" formControlName="birthdate" placeholder="YYYY-MM-DD" />
+    </div>
+
+    <!-- Phone Number -->
+    <div class="field col-12 md:col-6">
+      <label for="phoneNumber">Phone Number</label>
+      <input pInputText id="phoneNumber" formControlName="phoneNumber" placeholder="Phone Number" />
+    </div>
+
+    <!-- Address Section -->
+    <div class="field col-12 md:col-12">
+      <h4>Address</h4>
+    </div>
+
+    <!-- Street -->
+    <div class="field col-12">
+      <label for="street">Street</label>
+      <input pInputText id="street" formControlName="street" placeholder="Street Address" />
+    </div>
+
+    <!-- City -->
+    <div class="field col-12 md:col-6">
+      <label for="city">City</label>
+      <input pInputText id="city" formControlName="city" placeholder="City" />
+    </div>
+
+    <!-- State -->
+    <div class="field col-12 md:col-6">
+      <label for="state">State</label>
+      <input pInputText id="state" formControlName="state" placeholder="State" />
+    </div>
+
+    <!-- Zip Code -->
+    <div class="field col-12 md:col-6">
+      <label for="zip">Zip Code</label>
+      <input pInputText id="zip" formControlName="zip" placeholder="Zip Code" />
+    </div>
+
+    <!-- Country -->
+    <div class="field col-12 md:col-6">
+      <label for="country">Country</label>
+      <input pInputText id="country" formControlName="country" placeholder="Country" />
+    </div>
+
+    <!-- Username -->
+    <div class="field col-12 md:col-6">
+      <label for="username">Username</label>
+      <input pInputText id="username" formControlName="username" placeholder="Username" />
+    </div>
+
+    <!-- Password -->
+    <div class="field col-12 md:col-6">
+      <label for="password">Password</label>
+      <input pPassword id="password" formControlName="password" placeholder="Password" />
+    </div>
+
+    <!-- Confirm Password -->
+    <div class="field col-12 md:col-6">
+      <label for="confirmPassword">Confirm Password</label>
+      <input pPassword id="confirmPassword" formControlName="confirmPassword" placeholder="Confirm Password" />
+    </div>
+
+    <!-- Submit Button -->
+    <div class="field col-12 md:col-6">
+      <p-button label="Submit" icon="pi pi-check" styleClass="w-10rem mx-auto" type="submit"></p-button>
+    </div>
+  </form>
+</div>
