--- a/src/app/features/sign-up/sign-up.component.html
+++ b/src/app/features/sign-up/sign-up.component.html
@@ -1,91 +1,84 @@
 <div class="container">
-  <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-box p-fluid grid formgrid">
-    <!-- First Name -->
-    <div class="field col-12 md:col-6">
-      <label for="firstname">First Name</label>
-      <input pInputText id="firstname" formControlName="firstname" placeholder="First Name" />
-    </div>
-
-    <!-- Last Name -->
-    <div class="field col-12 md:col-6">
-      <label for="lastname">Last Name</label>
-      <input pInputText id="lastname" formControlName="lastname" placeholder="Last Name" />
-    </div>
-
-    <!-- Email -->
-    <div class="field col-12">
-      <label for="email">Email</label>
-      <input pInputText id="email" formControlName="email" placeholder="Email Address" />
-    </div>
-
-    <!-- Birthdate -->
-    <div class="field col-12 md:col-6">
-      <label for="birthdate">Birthdate</label>
-      <input pInputText id="birthdate" formControlName="birthdate" placeholder="YYYY-MM-DD" />
-    </div>
-
-    <!-- Phone Number -->
-    <div class="field col-12 md:col-6">
-      <label for="phoneNumber">Phone Number</label>
-      <input pInputText id="phoneNumber" formControlName="phoneNumber" placeholder="Phone Number" />
-    </div>
-
-    <!-- Address Section -->
-    <div class="field col-12 md:col-12">
-      <h4>Address</h4>
-    </div>
-
-    <!-- Street -->
-    <div class="field col-12">
-      <label for="street">Street</label>
-      <input pInputText id="street" formControlName="street" placeholder="Street Address" />
-    </div>
-
-    <!-- City -->
-    <div class="field col-12 md:col-6">
-      <label for="city">City</label>
-      <input pInputText id="city" formControlName="city" placeholder="City" />
-    </div>
-
-    <!-- State -->
-    <div class="field col-12 md:col-6">
-      <label for="state">State</label>
-      <input pInputText id="state" formControlName="state" placeholder="State" />
-    </div>
-
-    <!-- Zip Code -->
-    <div class="field col-12 md:col-6">
-      <label for="zip">Zip Code</label>
-      <input pInputText id="zip" formControlName="zip" placeholder="Zip Code" />
-    </div>
-
-    <!-- Country -->
-    <div class="field col-12 md:col-6">
-      <label for="country">Country</label>
-      <input pInputText id="country" formControlName="country" placeholder="Country" />
-    </div>
-
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="form-box">
+    <h1 class="titleform">Register</h1>
+    <hr>
     <!-- Username -->
-    <div class="field col-12 md:col-6">
+    <div class="field-container ">
       <label for="username">Username</label>
       <input pInputText id="username" formControlName="username" placeholder="Username" />
     </div>
 
     <!-- Password -->
-    <div class="field col-12 md:col-6">
+    <div class="field-container ">
       <label for="password">Password</label>
-      <input pPassword id="password" formControlName="password" placeholder="Password" />
+      <input type="password"s pPassword id="password" formControlName="password" placeholder="Password" />
     </div>
 
     <!-- Confirm Password -->
-    <div class="field col-12 md:col-6">
+    <div class="field-container ">
       <label for="confirmPassword">Confirm Password</label>
-      <input pPassword id="confirmPassword" formControlName="confirmPassword" placeholder="Confirm Password" />
+      <input type="password" pPassword id="confirmPassword" formControlName="confirmPassword" placeholder="Confirm Password" />
+    </div>
+    <hr>
+    <!-- First Name -->
+    <div class="field-container ">
+      <label for="firstname">First Name</label>
+      <input pInputText id="firstname" formControlName="firstname" placeholder="First Name" />
+    </div>
+
+    <!-- Last Name -->
+    <div class="field-container ">
+      <label for="lastname">Last Name</label>
+      <input pInputText id="lastname" formControlName="lastname" placeholder="Last Name" />
+    </div>
+
+    <!-- Email -->
+    <div class="field-container ">
+      <label for="email">Email</label>
+      <input pInputText id="email" formControlName="email" placeholder="Email Address" />
+    </div>
+
+    <!-- Birthdate -->
+    <div class="field-container ">
+      <label for="birthdate">Birthdate</label>
+      <p-calendar dateFormat="dd.mm.yy" formControlName="birthdate" [maxDate]="maxDate"/> 
+    </div>
+    <hr>
+
+    <!-- Address  -->
+    <!-- Street -->
+    <div class="field-container ">
+      <label for="street">Street</label>
+      <input pInputText id="street" formControlName="street" placeholder="Street Address" />
+    </div>
+
+    <!-- City -->
+    <div class="field-container ">
+      <label for="city">City</label>
+      <input pInputText id="city" formControlName="city" placeholder="City" />
+    </div>
+
+    <!-- Zip Code -->
+    <div class="field-container ">
+      <label for="zip">ZIP Code</label>
+      <input pInputText id="zip" formControlName="zip" placeholder="ZIP Code" />
+    </div>
+
+    <!-- State -->
+    <div class="field-container ">
+      <label for="state">State</label>
+      <input pInputText id="state" formControlName="state" placeholder="State" />
+    </div>
+
+    <!-- Country -->
+    <div class="field-container ">
+      <label for="country">Country</label>
+      <input pInputText id="country" formControlName="country" placeholder="Country" />
     </div>
 
     <!-- Submit Button -->
-    <div class="field col-12 md:col-6">
-      <p-button label="Submit" icon="pi pi-check" styleClass="w-10rem mx-auto" type="submit"></p-button>
+    <div >
+      <p-button label="Submit" icon="pi pi-check" type="submit"></p-button>
     </div>
   </form>
 </div>
